# team-8

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  hack-project.jsonc  jsconfig.json  main.py  package-lock.json  package.json  pyproject.toml  settings.py  tailwind.config.js  vote-description.md
api/v1/: routes.py
backend/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py
backend/api/v1/: routes.py  services.py
backend/db/schemas/: student.py  student_answer.py
backend/nginx/conf.d/: defoult.conf  nginx.conf
core/: database.py
db/models/: base.py  guideline.py  professor.py  question.py  student.py  student_answer.py  test.py
db/schemas/: guideline.py  professor.py  question.py  student.py  student_answer.py  test.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.js  page.js
frontend/src/components/: DragAndDrop.js  Navbar.js  UploadPage.js
nginx/conf.d/: nginx.conf
routers/: items.py
services/: supabase_service.py  textract_function.py
src/api/: guidelines.js  index.js  questions.js  studentsAnswers.js  tests.js
src/app/: globals.css  layout.js  page.js
src/app/guidelines/: page.js
src/app/uiResources/: page.js
src/components/: DragAndDrop.js  Navbar.js  UploadPage.js
src/components/buttons/: ThirdButton.js  index.js
src/components/cards/: BaseCard.js  GuidelineCard.js  QuestionCard.js  UltimateCard.js  index.js
src/components/questions/: AccordionQuestion.js  (+2 more)
src/config/: config.js
(+9 files in other folders)
